# wuji-shadow-box-simulator

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: build-portable.mjs  enrich-loot-data.mjs  run-tauri-vs.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/data/: loot-pools.json
src/main/: index.ts
src/main/data/: loot-pools.json
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  api.ts  global.d.ts  styles.css
src/shared/: types.ts
