[package]
name = "wuji-shadow-box-simulator"
version = "0.1.0"
description = "JX3 武技殊影图开图模拟器"
authors = ["兰舟少住"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = [] }
urlencoding = "2"
